--- a/local.properties
+++ b/local.properties
@@ -7,3 +7,4 @@
 #Sat Mar 18 14:22:12 KST 2023
 sdk.dir=/Users/n22301003-sysong/Library/Android/sdk
 kakao_rest_api_key="21e8d622fc36381f14d57054a01f2bfd"
+KakaoApiUrl="https://dapi.kakao.com/v2/"
